@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-07T01:52:52Z",
-  "count_outdated" : 232,
-  "uniques_outdated" : 52,
+  "timestamp" : "2022-06-09T16:31:58Z",
+  "count_outdated" : 236,
+  "uniques_outdated" : 53,
   "count" : 237,
   "uniques" : 54,
   "views" : [
-    {
-      "timestamp": "2022-05-26T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-03T00:00:00Z",
       "count": 1,
